gke-dev/k8s-manifests/http-load-balancer/ilb-ingress.yaml
apiVersion: v1
kind: List
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: gce
    name: api-demo-v3-ingress
  spec:
    rules:
    - http:
        paths:
        - backend:
            service:
              name: api-demo-v3-service
              port:
                name: my-http
          path: /*
          pathType: ImplementationSpecific
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: gce
    name: api-demo-v2-ingress
  spec:
    rules:
    - http:
        paths:
        - backend:
            service:
              name: api-demo-v2-service
              port:
                name: my-http
          path: /*
          pathType: ImplementationSpecific
# - apiVersion: networking.gke.io/v1
#   kind: ManagedCertificate
#   metadata:
#     name: api-cert
#   spec:
#     domains:
#       - api.kefeng.dns.doit-playground.com
# - apiVersion: networking.k8s.io/v1
#   kind: Ingress
#   metadata:
#     annotations:
#       kubernetes.io/ingress.class: gce
#       networking.gke.io/managed-certificates: api-cert
#     name: api-demo-v3-ingress
#   spec:
#     rules:
#     - host: api.kefeng.dns.doit-playground.com
#       http:
#         paths:
#         - backend:
#             service:
#               name: api-demo-v3-service
#               port:
#                 name: my-http
#           path: /*
#           pathType: ImplementationSpecific
